[tool.poetry]
name = "ibrokear.ch"
version = "0.1.0"
description = ""
authors = ["Ben Mitchell <bjosephmitchell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-Caching = "^1.10.1"
requests = "^2.26.0"
redis = "^4.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
